# Pyesis

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyesis_state.backup_20260601_113253_summarydedupe.json  pyesis_state.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml
diff_buffers/: 2026-06-01.json  2026-06-02.json
exports/: 2026Jun01Pyesis.docx  weekly_changes_20260601_142014.docx
exports/state_backups/: diff_buffers.2026-06-09.before-refresh-2.json  diff_buffers.2026-06-09.before-refresh.json  pyesis_state.2026-06-09.before-refresh-2.json  pyesis_state.2026-06-09.before-refresh.json  pyesis_state.2026-06-29.after-test-clobber.json  pyesis_state.20260701_154637.before-rehydrate.json
logs/: ai_attempts.jsonl
pyesis/: __init__.py  ai_summary.py  app.py  config.py  diff_buffer.py  document_formatter.py  git_monitor.py  github_auth.py  summary_enhancer.py
scripts/: build_native.py  repair_ai_summary_downgrades.py
tests/: test_ai_summary.py  test_app_summary_protection.py  test_config_summary_protection.py  test_document_formatter.py  test_summary_enhancer.py
