[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pyesis"
version = "2026.6.3.0"
description = "Desktop git diff monitor with weekly Word output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-docx>=1.1.2",
  "markdown>=3.7",
]

[project.scripts]
pyesis = "pyesis.app:main"

[tool.hatch.build.targets.wheel]
packages = ["pyesis"]